--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "conventionalCommits.scopes": ["index.html & style.css", "index.html"]
+  "conventionalCommits.scopes": [
+    "index.html & style.css",
+    "index.html",
+    "style.css"
+  ]
 }
